--- a/follow_Up_Consultation_new.html
+++ b/follow_Up_Consultation_new.html
@@ -95,14 +95,14 @@
 			<div class="row">
 				<div class="col-lg-7">
 					<div class="page_title">
-						<h1>Doctor Consultation<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h1>
+						<h1>Follow Up Consultation<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h1>
 					</div>
 				</div>
 				<div class="col-lg-5">
 					<div class="d-flex flex-wrap align-content-center" style="height: 100%;">
 						<ul>
 							<li>Patient</li>
-							<li>Doctor Consultation</li>
+							<li>Follow Up Consultation</li>
 						</ul>
 					</div>
 				</div>
@@ -112,105 +112,26 @@
 
 	<section class="all_page_search_section">
 		<div class="container">
-			<label>See a Specialist from home within minutes.</label>
-			<div class="input_with_icont">
-				<input type="text" class="form-control" placeholder="Search for Doctors across multiple specialities and more...">
-				<img src="images/search.png" alt="searct_icon">
-			</div>
-		</div>
-	</section>
-	
-	<section class="specialities">
-		<div class="container">
-			<div class="section_title">
-				<h2>Specialities<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
-				<div class="specialities_toggle_btn">
-					<a href="javascript:void(0);"><i class="fa fa-caret-down" aria-hidden="true"></i></a>
+			<label>Follow Up Consultation</label>
+			<div class="row">
+				<div class="col-lg-4">
+						<input type="text" class="form-control" placeholder="Search for Doctors by geolocation...">
 				</div>
-			</div>
-			<div class="specialities_toggle_menu" style="display: none;">
-				<div class="row">
-					<div class="col-lg-2">
-						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
-							<img src="images/dermatology.png" alt="line image">
-							<p>Dermatology</p>
-						</a>
-					</div>
-					<div class="col-lg-2">
-						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
-							<img src="images/ENT.png" alt="line image">
-							<p>ENT</p>
-						</a>
-					</div>
-					<div class="col-lg-2">
-						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
-							<img src="images/dentistry.png" alt="line image">
-							<p>Dentistry</p>
-						</a>
-					</div>
-					<div class="col-lg-2">
-						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
-							<img src="images/general_GP.png" alt="line image">
-							<p>General Physician - GP</p>
-						</a>
-					</div>
-					<div class="col-lg-2">
-						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
-							<img src="images/medicine.png" alt="line image">
-							<p>Internal Medicine</p>
-						</a>
-					</div>
-					<div class="col-lg-2">
-						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
-							<img src="images/Gastroenterology.png" alt="line image">
-							<p>Gastroenterology</p>
-						</a>
-					</div>
-					<div class="col-lg-2">
-						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
-							<img src="images/nd.png" alt="line image">
-							<p>Nutrition & Dietetics</p>
-						</a>
-					</div>
-					<div class="col-lg-2">
-						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
-							<img src="images/doctor.png" alt="line image">
-							<p>Obstetrics & Gynaecology</p>
-						</a>
-					</div>
-					<div class="col-lg-2">
-						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
-							<img src="images/nurse.png" alt="line image">
-							<p>Paediatrics</p>
-						</a>
-					</div>
-					<div class="col-lg-2">
-						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
-							<img src="images/psychiatry.png" alt="line image">
-							<p>Psychiatry</p>
-						</a>
-					</div>
-					<div class="col-lg-2">
-						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
-							<img src="images/drug.png" alt="line image">
-							<p>Psychology</p>
-						</a>
-					</div>
-					<div class="col-lg-2">
-						<a href="#" class="speciality_menu_links d-flex flex-wrap align-content-center">
-							<img src="images/syrings.png" alt="line image">
-							<p>Pulmonology</p>
-						</a>
-					</div>
+				<div class="col-lg-4">
+						<input type="text" class="form-control" placeholder="Search for Doctors by symptoms...">
+				</div>
+				<div class="col-lg-4">
+						<input type="text" class="form-control" placeholder="Search for Doctors by hospitals...">
 				</div>
 			</div>
 		</div>
 	</section>
 
+
 	<section class="dermatology">
 		<div class="container">
 			<div class="section_title">
-				<h2 class="text-black">Dermatology<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
+				<h2 class="text-black">Past Consultation<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
 			</div>
 			<div class="dermatology_doctor_detail">
 				<div class="row">
