--- a/appoinment_booking_after_login.html
+++ b/appoinment_booking_after_login.html
@@ -42,9 +42,9 @@
 				<div class="row">
 					<div class="logo">
 						<a href="index.html"><img src="images/prydeLogo.png" alt="logo_image"></a>
-						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+						<!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
 							<i class="fa fa-bars" aria-hidden="true"></i>
-						</button>
+						</button> -->
 					</div>
 					<nav class="navbar navbar-expand-lg">
 						<div class="collapse navbar-collapse" id="collapsibleNavbar">
@@ -112,10 +112,23 @@
 
 	<section class="all_page_search_section">
 		<div class="container">
-			<label>See a Specialist from home within minutes.</label>
-			<div class="input_with_icont">
-				<input type="text" class="form-control" placeholder="Search for Doctors across multiple specialities and more...">
-				<img src="images/search.png" alt="searct_icon">
+					<label>See a Specialist from home within minutes.</label>
+			<div class="row">
+				<div class="col-md-4">
+					<div>
+						<input type="text" class="form-control" placeholder="Search for Doctors by geolocation...">
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div>
+						<input type="text" class="form-control" placeholder="Search for Doctors by symptoms...">
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div>
+						<input type="text" class="form-control" placeholder="Search for Doctors by hospitals...">
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -204,208 +217,85 @@
 					</div>
 				</div>
 			</div>
+			</div>
 		</div>
 	</section>
 
-	<section class="dermatology">
+	<section class="book_appointment">
 		<div class="container">
 			<div class="section_title">
-				<h2 class="text-black">Dermatology<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
+				<h2>Book Your Appointment<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
 			</div>
-			<div class="dermatology_doctor_detail">
-				<div class="row">
-					<div class="col-lg-4">
-						<div class="doctor_image">
-							<img src="images/doctor-1.png">
+			<div class="row">
+				<div class="col-lg-4 col-md-6">
+						<label>First Name</label>
+						<input class="form-control" type="text" name="" placeholder="Enter Your First Name">
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<label>Middle Name</label>
+						<input class="form-control" type="text" name="" placeholder="Enter Your Middle Name">
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<label>Last Name</label>
+						<input class="form-control" type="text" name="" placeholder="Enter Your Last Name">
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<label>Date of Birth</label>
+						<div class="input-group mb-3">
+							<div class="input-group-prepend">
+								<span class="input-group-text" id="basic-addon1"><i class="fa fa-calendar-o" aria-hidden="true"></i></span>
+							</div>
+							<input type="text" class="form-control" placeholder="Date Of Birth" aria-label="" aria-describedby="basic-addon1">
 						</div>
 					</div>
-					<div class="col-lg-8">
-						<div class="doctor_details">
-							<div class="doctor_name">
-								<h4><span class="doctor_blue">Dr.</span> Archana Andavarapu</h4>
-								<p>Dr. Archana Andavarapu - Consult A Pulmonologist Online Anytime | CallHealth, India</p>
-							</div>
-							<div class="doctor_overview">
-								<h6>Doctor Overview</h6>
-								<p>Dr. Archana Andavarapu is an academy-oriented Dermatologist and Cosmetologist who has 5 years of experience in the fields of Clinical and Cosmetic Dermatology with expertise in advanced Cosmetology, Venereology and Leprosy. He has presented and published various papers in the...</p>
-							</div>
-							<div class="doctor_consult">
-								<p><strike>&#8377 500</strike><span class="blue_price">249</span></p>
-								<span class="gray_save">you saved: &#8377 251</span>
-							</div>
-							<button type="button">Consult</button>
+					<div class="col-lg-4 col-md-6">
+						<label>Age</label>
+						<input class="form-control" type="text" name="" placeholder="Enter Your Age">
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<label>Contact Number</label>
+						<input class="form-control" type="text" name="" placeholder="Enter Your Contact Number">
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<label>Email Address</label>
+						<input class="form-control" type="text" name="" placeholder="Enter Your Email Address">
+					</div>
+					<div class="col-lg-4 col-md-6">
+						<label>Gender</label>
+						<div class="btn-group btn-group-toggle" data-toggle="buttons">
+							<label class="btn btn-light active">
+								<input type="radio" name="options" id="option1" autocomplete="off" checked> Male
+							</label>
+							<label class="btn btn-light">
+								<input type="radio" name="options" id="option2" autocomplete="off"> Female
+							</label>
+							<label class="btn btn-light">
+								<input type="radio" name="options" id="option3" autocomplete="off"> Other
+							</label>
 						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg">
-						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
-							<img src="images/1.png" alt="line image">
-							<p>Qualification:</p>
-							<p>MBBS,MD (DVL)</p>
-						</a>
+					<div class="col-lg-4 col-md-6">
+						<label>Upload Previous History/Report/Rescription</label>
+						<div class="upload_btn">
+						<button>Upload Files</button>
 					</div>
-					<div class="col-lg">
-						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
-							<img src="images/2.png" alt="line image">
-							<p>Speciality:</p>
-							<p>Dermatology</p>
-						</a>
 					</div>
-					<div class="col-lg">
-						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
-							<img src="images/3.png" alt="line image">
-							<p>Years of Experience:</p>
-							<p>5</p>
-						</a>
+					<div class="col-lg-4 col-md-6">
+						<label>Department</label>
+						<select>
+								<option value="Hospital">Hospital</option>
+								<option value="Laboratory">Laboratory</option>
+								<option value="Medical">Medical</option>
+							</select>
 					</div>
-					<div class="col-lg">
-						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
-							<img src="images/4.png" alt="line image">
-							<p>Available days:</p>
-							<p>Mon - Sat</p>
-						</a>
+					<div class="col-lg-4 col-md-6">
+						<label>Doctor</label>
+						<select>
+								<option value="john Deo">Hospital</option>
+								<option value="john Deo">Laboratory</option>
+								<option value="john Deo">Medical</option>
+							</select>
 					</div>
-					<div class="col-lg">
-						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
-							<img src="images/5.png" alt="line image">
-							<p>Available timings: </p>
-							<p>	08:00 AM to 03:00 PM</p>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<hr>
-		<div class="container">
-			<div class="dermatology_doctor_detail">
-				<div class="row">
-					<div class="col-lg-4">
-						<div class="doctor_image">
-							<img src="images/doctor-2.png">
-						</div>
-					</div>
-					<div class="col-lg-8">
-						<div class="doctor_details">
-							<div class="doctor_name">
-								<h4><span class="doctor_blue">Dr.</span> Archana Andavarapu</h4>
-								<p>Dr. Archana Andavarapu - Consult A Pulmonologist Online Anytime | CallHealth, India</p>
-							</div>
-							<div class="doctor_overview">
-								<h6>Doctor Overview</h6>
-								<p>Dr. Archana Andavarapu is an academy-oriented Dermatologist and Cosmetologist who has 5 years of experience in the fields of Clinical and Cosmetic Dermatology with expertise in advanced Cosmetology, Venereology and Leprosy. He has presented and published various papers in the...</p>
-							</div>
-							<div class="doctor_consult">
-								<p><strike>&#8377 500</strike><span class="blue_price">249</span></p>
-								<span class="gray_save">you saved: &#8377 251</span>
-							</div>
-							<button type="button">Consult</button>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg">
-						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
-							<img src="images/1.png" alt="line image">
-							<p>Qualification:</p>
-							<p>MBBS,MD (DVL)</p>
-						</a>
-					</div>
-					<div class="col-lg">
-						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
-							<img src="images/2.png" alt="line image">
-							<p>Speciality:</p>
-							<p>Dermatology</p>
-						</a>
-					</div>
-					<div class="col-lg">
-						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
-							<img src="images/3.png" alt="line image">
-							<p>Years of Experience:</p>
-							<p>5</p>
-						</a>
-					</div>
-					<div class="col-lg">
-						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
-							<img src="images/4.png" alt="line image">
-							<p>Available days:</p>
-							<p>Mon - Sat</p>
-						</a>
-					</div>
-					<div class="col-lg">
-						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
-							<img src="images/5.png" alt="line image">
-							<p>Available timings: </p>
-							<p>	08:00 AM to 03:00 PM</p>
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-		<hr>
-		<div class="container">
-			<div class="dermatology_doctor_detail">
-				<div class="row">
-					<div class="col-lg-4">
-						<div class="doctor_image">
-							<img src="images/doctor-3.png">
-						</div>
-					</div>
-					<div class="col-lg-8">
-						<div class="doctor_details">
-							<div class="doctor_name">
-								<h4><span class="doctor_blue">Dr.</span> Archana Andavarapu</h4>
-								<p>Dr. Archana Andavarapu - Consult A Pulmonologist Online Anytime | CallHealth, India</p>
-							</div>
-							<div class="doctor_overview">
-								<h6>Doctor Overview</h6>
-								<p>Dr. Archana Andavarapu is an academy-oriented Dermatologist and Cosmetologist who has 5 years of experience in the fields of Clinical and Cosmetic Dermatology with expertise in advanced Cosmetology, Venereology and Leprosy. He has presented and published various papers in the...</p>
-							</div>
-							<div class="doctor_consult">
-								<p><strike>&#8377 500</strike><span class="blue_price">249</span></p>
-								<span class="gray_save">you saved: &#8377 251</span>
-							</div>
-							<button type="button">Consult</button>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg">
-						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
-							<img src="images/1.png" alt="line image">
-							<p>Qualification:</p>
-							<p>MBBS,MD (DVL)</p>
-						</a>
-					</div>
-					<div class="col-lg">
-						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
-							<img src="images/2.png" alt="line image">
-							<p>Speciality:</p>
-							<p>Dermatology</p>
-						</a>
-					</div>
-					<div class="col-lg">
-						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
-							<img src="images/3.png" alt="line image">
-							<p>Years of Experience:</p>
-							<p>5</p>
-						</a>
-					</div>
-					<div class="col-lg">
-						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
-							<img src="images/4.png" alt="line image">
-							<p>Available days:</p>
-							<p>Mon - Sat</p>
-						</a>
-					</div>
-					<div class="col-lg">
-						<a href="#" class="dermatology_info d-flex flex-wrap align-content-center">
-							<img src="images/5.png" alt="line image">
-							<p>Available timings: </p>
-							<p>	08:00 AM to 03:00 PM</p>
-						</a>
-					</div>
-				</div>
 			</div>
 		</div>
 	</section>
