dashboard remaining and changes

--- a/appoinment_booking_after_login.html
+++ b/appoinment_booking_after_login.html
@@ -112,7 +112,7 @@
 
 	<section class="all_page_search_section">
 		<div class="container">
-					<label>See a Specialist from home within minutes.</label>
+			<label>See a Specialist from home within minutes.</label>
 			<div class="row">
 				<div class="col-md-4">
 					<div>
@@ -217,176 +217,177 @@
 					</div>
 				</div>
 			</div>
+		</div>
+	</div>
+</section>
+
+<section class="book_appointment">
+	<div class="container">
+		<div class="section_title">
+			<h2>Book Your Appointment<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
+		</div>
+		<div class="row">
+			<div class="col-lg-4 col-md-6">
+				<label>First Name</label>
+				<input class="form-control" type="text" name="" placeholder="Enter Your First Name">
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<label>Middle Name</label>
+				<input class="form-control" type="text" name="" placeholder="Enter Your Middle Name">
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<label>Last Name</label>
+				<input class="form-control" type="text" name="" placeholder="Enter Your Last Name">
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<label>Date of Birth</label>
+				<div class="input-group mb-3">
+					<div class="input-group-prepend">
+						<span class="input-group-text" id="basic-addon1"><i class="fa fa-calendar-o" aria-hidden="true"></i></span>
+					</div>
+					<input type="date" class="form-control" id="datepicker" placeholder="Date of Birth" aria-label="" aria-describedby="basic-addon1">
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<label>Age</label>
+				<input class="form-control" type="text" name="" placeholder="Enter Your Age">
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<label>Contact Number</label>
+				<input class="form-control" type="text" name="" placeholder="Enter Your Contact Number">
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<label>Email Address</label>
+				<input class="form-control" type="text" name="" placeholder="Enter Your Email Address">
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<label>Gender</label>
+				<div class="btn-group btn-group-toggle" data-toggle="buttons">
+					<label class="btn btn-light active">
+						<input type="radio" name="options" id="option1" autocomplete="off" checked> Male
+					</label>
+					<label class="btn btn-light">
+						<input type="radio" name="options" id="option2" autocomplete="off"> Female
+					</label>
+					<label class="btn btn-light">
+						<input type="radio" name="options" id="option3" autocomplete="off"> Other
+					</label>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<label>Upload Previous History/Report/Rescription</label>
+				<div class="upload_btn">
+					<input type="file" id="upload_file" style="display: none;">
+					<label for="upload_file">Upload File</label>
+				</div>
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<label>Department</label>
+				<select>
+					<option value="Hospital">Hospital</option>
+					<option value="Laboratory">Laboratory</option>
+					<option value="Medical">Medical</option>
+				</select>
+			</div>
+			<div class="col-lg-4 col-md-6">
+				<label>Doctor</label>
+				<select>
+					<option value="john Deo">Hospital</option>
+					<option value="john Deo">Laboratory</option>
+					<option value="john Deo">Medical</option>
+				</select>
 			</div>
 		</div>
-	</section>
+	</div>
+</section>
 
-	<section class="book_appointment">
-		<div class="container">
-			<div class="section_title">
-				<h2>Book Your Appointment<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
+<footer>
+	<div class="footer_left">
+		<div class="footer_contact_info">
+			<div class="logo">
+				<img src="images/prydeLogo.png" alt="logo_image">
 			</div>
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+			</p>
+			<span><img src="images/location.png" alt="icon image">Address: - Ahmedabad, India</span>
+			<span><img src="images/call.png" alt="icon image">Call us: - <a href="tel:+919988765432">+91 99 88 765 432</a></span>
+			<span><img src="images/email.png" alt="icon image">Email: - <a href="mailto:dummy@example.com">dummy@example.com</a></span>
+		</div>
+	</div>
+	<div class="footer_right">
+		<div class="footer_top">
 			<div class="row">
-				<div class="col-lg-4 col-md-6">
-						<label>First Name</label>
-						<input class="form-control" type="text" name="" placeholder="Enter Your First Name">
-					</div>
-					<div class="col-lg-4 col-md-6">
-						<label>Middle Name</label>
-						<input class="form-control" type="text" name="" placeholder="Enter Your Middle Name">
-					</div>
-					<div class="col-lg-4 col-md-6">
-						<label>Last Name</label>
-						<input class="form-control" type="text" name="" placeholder="Enter Your Last Name">
-					</div>
-					<div class="col-lg-4 col-md-6">
-						<label>Date of Birth</label>
-						<div class="input-group mb-3">
-							<div class="input-group-prepend">
-								<span class="input-group-text" id="basic-addon1"><i class="fa fa-calendar-o" aria-hidden="true"></i></span>
-							</div>
-							<input type="text" class="form-control" placeholder="Date Of Birth" aria-label="" aria-describedby="basic-addon1">
+				<div class="col-xl-8">
+					<h6>Patient</h6>
+					<div class="row">
+						<div class="col-6">
+							<ul>
+								<li><a href="#">Doctor Consultation</a></li>
+								<li><a href="#">Search Clinic</a></li>
+								<li><a href="#">My Appointment</a></li>
+								<li><a href="#">Family Doctor</a></li>
+								<li><a href="#">Radiologist - Lab Booking</a></li>
+								<li><a href="#">Pathologist - Lab Booking</a></li>
+								<li><a href="#">Physiotheraphy</a></li>
+								<li><a href="#">Nursing</a></li>
+								<li><a href="#">Emotional Wllbeing</a></li>
+								<li><a href="#">Second Openion</a></li>
+							</ul>
+						</div>
+						<div class="col-6">
+							<ul>
+								<li><a href="#">Follow Up Consultation</a></li>
+								<li><a href="#">Medicine Supply</a></li>
+								<li><a href="#">Medical Equipment Supply</a></li>
+								<li><a href="#">New Born Baby & Mother Care at Home</a></li>
+								<li><a href="#">Smart Ambulance</a></li>
+								<li><a href="#">AI Based Patient Summary & Suggestions</a></li>
+								<li><a href="#">Online Payment Mechanism</a></li>
+								<li><a href="#">eHR at Patient</a></li>
+							</ul>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6">
-						<label>Age</label>
-						<input class="form-control" type="text" name="" placeholder="Enter Your Age">
-					</div>
-					<div class="col-lg-4 col-md-6">
-						<label>Contact Number</label>
-						<input class="form-control" type="text" name="" placeholder="Enter Your Contact Number">
-					</div>
-					<div class="col-lg-4 col-md-6">
-						<label>Email Address</label>
-						<input class="form-control" type="text" name="" placeholder="Enter Your Email Address">
-					</div>
-					<div class="col-lg-4 col-md-6">
-						<label>Gender</label>
-						<div class="btn-group btn-group-toggle" data-toggle="buttons">
-							<label class="btn btn-light active">
-								<input type="radio" name="options" id="option1" autocomplete="off" checked> Male
-							</label>
-							<label class="btn btn-light">
-								<input type="radio" name="options" id="option2" autocomplete="off"> Female
-							</label>
-							<label class="btn btn-light">
-								<input type="radio" name="options" id="option3" autocomplete="off"> Other
-							</label>
-						</div>
-					</div>
-					<div class="col-lg-4 col-md-6">
-						<label>Upload Previous History/Report/Rescription</label>
-						<div class="upload_btn">
-						<button>Upload Files</button>
-					</div>
-					</div>
-					<div class="col-lg-4 col-md-6">
-						<label>Department</label>
-						<select>
-								<option value="Hospital">Hospital</option>
-								<option value="Laboratory">Laboratory</option>
-								<option value="Medical">Medical</option>
-							</select>
-					</div>
-					<div class="col-lg-4 col-md-6">
-						<label>Doctor</label>
-						<select>
-								<option value="john Deo">Hospital</option>
-								<option value="john Deo">Laboratory</option>
-								<option value="john Deo">Medical</option>
-							</select>
-					</div>
+				</div>
+				<div class="col-xl-4">
+					<h6>Doctor</h6>
+					<ul>
+						<li><a href="#">OPD scheduler</a></li>
+						<li><a href="#">IPD scheduler</a></li>
+						<li><a href="#">Doctor Calendar</a></li>
+						<li><a href="#">Doctor Profile</a></li>
+						<li><a href="#">Online Consultation</a></li>
+						<li><a href="#">Share Prescription</a></li>
+						<li><a href="#">Syncing with Patient Calendar</a></li>
+						<li><a href="#">Patient conversation from OPD to IPD</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
-	</section>
+		<div class="footer_bottom">
+			<ul class="copyright_text">
+				<li><p>Copyright © 2019.</p></li>
+				<li><a href="#">Privacy Policy</a></li>
+				<li><a href="#">Terms & Conditions</a></li>
+				<li><a href="#">Career</a></li>
+			</ul>
+			<ul class="social_media_links">
+				<li><a href="#"><img src="images/facebook.png" alt="social icon"></a></li>
+				<li><a href="#"><img src="images/twitter.png" alt="social icon"></a></li>
+				<li><a href="#"><img src="images/linked_in.png" alt="social icon"></a></li>
+				<li><a href="#"><img src="images/google_plus.png" alt="social icon"></a></li>
+			</ul>
+		</div>
+	</div>
+</footer>
 
-	<footer>
-		<div class="footer_left">
-			<div class="footer_contact_info">
-				<div class="logo">
-					<img src="images/prydeLogo.png" alt="logo_image">
-				</div>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-				</p>
-				<span><img src="images/location.png" alt="icon image">Address: - Ahmedabad, India</span>
-				<span><img src="images/call.png" alt="icon image">Call us: - <a href="tel:+919988765432">+91 99 88 765 432</a></span>
-				<span><img src="images/email.png" alt="icon image">Email: - <a href="mailto:dummy@example.com">dummy@example.com</a></span>
-			</div>
-		</div>
-		<div class="footer_right">
-			<div class="footer_top">
-				<div class="row">
-					<div class="col-xl-8">
-						<h6>Patient</h6>
-						<div class="row">
-							<div class="col-6">
-								<ul>
-									<li><a href="#">Doctor Consultation</a></li>
-									<li><a href="#">Search Clinic</a></li>
-									<li><a href="#">My Appointment</a></li>
-									<li><a href="#">Family Doctor</a></li>
-									<li><a href="#">Radiologist - Lab Booking</a></li>
-									<li><a href="#">Pathologist - Lab Booking</a></li>
-									<li><a href="#">Physiotheraphy</a></li>
-									<li><a href="#">Nursing</a></li>
-									<li><a href="#">Emotional Wllbeing</a></li>
-									<li><a href="#">Second Openion</a></li>
-								</ul>
-							</div>
-							<div class="col-6">
-								<ul>
-									<li><a href="#">Follow Up Consultation</a></li>
-									<li><a href="#">Medicine Supply</a></li>
-									<li><a href="#">Medical Equipment Supply</a></li>
-									<li><a href="#">New Born Baby & Mother Care at Home</a></li>
-									<li><a href="#">Smart Ambulance</a></li>
-									<li><a href="#">AI Based Patient Summary & Suggestions</a></li>
-									<li><a href="#">Online Payment Mechanism</a></li>
-									<li><a href="#">eHR at Patient</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="col-xl-4">
-						<h6>Doctor</h6>
-						<ul>
-							<li><a href="#">OPD scheduler</a></li>
-							<li><a href="#">IPD scheduler</a></li>
-							<li><a href="#">Doctor Calendar</a></li>
-							<li><a href="#">Doctor Profile</a></li>
-							<li><a href="#">Online Consultation</a></li>
-							<li><a href="#">Share Prescription</a></li>
-							<li><a href="#">Syncing with Patient Calendar</a></li>
-							<li><a href="#">Patient conversation from OPD to IPD</a></li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="footer_bottom">
-				<ul class="copyright_text">
-					<li><p>Copyright © 2019.</p></li>
-					<li><a href="#">Privacy Policy</a></li>
-					<li><a href="#">Terms & Conditions</a></li>
-					<li><a href="#">Career</a></li>
-				</ul>
-				<ul class="social_media_links">
-					<li><a href="#"><img src="images/facebook.png" alt="social icon"></a></li>
-					<li><a href="#"><img src="images/twitter.png" alt="social icon"></a></li>
-					<li><a href="#"><img src="images/linked_in.png" alt="social icon"></a></li>
-					<li><a href="#"><img src="images/google_plus.png" alt="social icon"></a></li>
-				</ul>
-			</div>
-		</div>
-	</footer>
-	
-	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/popper.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/slick.min.js"></script>
-	<script type="text/javascript" src="js/aos.js"></script>
-	<script type="text/javascript" src="js/jquery.responsiveTabs.js"></script>
-	<script type="text/javascript" src="js/jquery-ui.js"></script>
-	<script type="text/javascript" src="js/custom.js"></script>
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/popper.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/slick.min.js"></script>
+<script type="text/javascript" src="js/aos.js"></script>
+<script type="text/javascript" src="js/jquery.responsiveTabs.js"></script>
+<script type="text/javascript" src="js/jquery-ui.js"></script>
+<script type="text/javascript" src="js/custom.js"></script>
 </body>
 </html> 	
