--- a/doctor_consulatation.html
+++ b/doctor_consulatation.html
@@ -123,7 +123,7 @@
 	<section class="specialities">
 		<div class="container">
 			<div class="section_title">
-				<h2 class="text-white">Specialities<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
+				<h2>Specialities<img src="images/light_blue_heart_beat_icon.png" alt="heart beat icon"></h2>
 				<!-- <div class="specialities_toggle_btn">
 					<a href="javascript:void(0);"><i class="fa fa-caret-down" aria-hidden="true"></i></a>
 				</div> -->
