--- a/patient_register.html
+++ b/patient_register.html
@@ -149,7 +149,7 @@
 					<div class="col-lg-12 col-md-12">
 						<div class="custom-control custom-checkbox">
 							<input type="checkbox" class="custom-control-input" id="customCheck1">
-							<label class="custom-control-label font_bold" for="customCheck1">Accept <a class="blue_font" href="">Terms and Conditions </a> And <a class="blue_font" href="">Privacy Policy</a> </label>
+							<label class="custom-control-label" for="customCheck1">Accept <a class="blue_font" href="">Terms and Conditions </a> And <a class="blue_font" href="">Privacy Policy</a> </label>
 						</div>
 					</div>
 					<div class="col-lg-12 col-md-12">
